# Software-security-of-mobile-systems

./: answers.docx  swagger.json
flutter app/: pubspec.yaml
flutter app/android/: build.gradle
flutter app/android/app/: build.gradle
flutter app/android/app/src/main/: AndroidManifest.xml
flutter app/android/app/src/main/cpp/: CMakeLists.txt  func.c
flutter app/android/app/src/main/java/com/example/flutter_native/: MainActivity.java
flutter app/ios/Runner/: Info.plist
flutter app/ios/Runner.xcodeproj/: project.pbxproj
flutter app/lib/: main.dart
flutter app/linux/: CMakeLists.txt  my_application.cc
flutter app/macos/Runner.xcodeproj/: project.pbxproj
flutter app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter app/macos/Runner/Configs/: AppInfo.xcconfig
flutter app/web/: index.html
flutter app/windows/: CMakeLists.txt
flutter app/windows/runner/: Runner.rc  main.cpp
https/: CA.key  CA.srl  LAB.KEY  LAB.cfg  LAB.crt  LAB.csr  main.js  package.json
законы/: ссылка.txt
теория/: Android NDK.docx  HAProxy.docx  Что такое TUN и TAP.docx
